hphp/test/slow/php7_backported/array_destructuring_byref.php.expectf
Fatal error: [] and list() assignments cannot be by reference in %s on line 5
